Corrections in test methods and dao´s