@@ -18,16 +18,14 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.NoSuchElementException;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 import static org.mockito.Mockito.mock;
@@ -37,10 +35,6 @@ import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.anyInt;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.atLeastOnce;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.eq;
 
 public class StudentDAOTest {
@@ -68,106 +62,98 @@ public class StudentDAOTest {
         }
     }
 
+    private void stubStudentRow(ResultSet rs, int idUser, String enrollment, String nombre, int projectId, boolean activo) throws SQLException {
+        when(rs.getInt("id_usuario")).thenReturn(idUser);
+        when(rs.getString("matricula")).thenReturn(enrollment);
+        when(rs.getString("nombre")).thenReturn(nombre);
+        when(rs.getString("apellidos")).thenReturn("Apellido");
+        when(rs.getString("correo")).thenReturn(enrollment + "@test.com");
+        when(rs.getString("contrasena")).thenReturn("pass");
+        when(rs.getBoolean("activo")).thenReturn(activo);
+        when(rs.getString("genero")).thenReturn("M");
+        when(rs.getBoolean("lengua_indigena")).thenReturn(false);
+        when(rs.getInt("proyecto")).thenReturn(projectId);
+        when(rs.getFloat("calificacion")).thenReturn(8.0f);
+    }
+
     @Test
-    void getStudentByEnrollment_InvalidEnrollment_ThrowsIllegalArgumentException() {
+    void getStudentByEnrollment_EnrollmentIsEmpty_ThrowsIllegalArgumentException() {
         assertThrows(IllegalArgumentException.class, () -> studentDAO.getStudentByEnrollment(""));
     }
 
     @Test
-    void getStudentByEnrollment_NotFound_ThrowsNoSuchElementException() throws SQLException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudentByEnrollment_StudentDoesNotExist_ThrowsNoSuchElementException() throws SQLException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(false);
         assertThrows(NoSuchElementException.class, () -> studentDAO.getStudentByEnrollment("S21012345"));
     }
 
     @Test
-    void getStudentByEnrollment_Success_NoProject() throws SQLException {
+    void getStudentByEnrollment_StudentExistsWithoutProject_ReturnsStudentWithExpectedEnrollment() throws SQLException, DataOperationException {
         String enrollment = "S21011011";
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(true);
-        when(resultSet.getInt("id_usuario")).thenReturn(50);
-        when(resultSet.getString("nombre")).thenReturn("Juan");
-        when(resultSet.getString("apellidos")).thenReturn("Pérez");
-        when(resultSet.getString("matricula")).thenReturn(enrollment);
-        when(resultSet.getBoolean("activo")).thenReturn(true);
-        when(resultSet.getInt("proyecto")).thenReturn(0);
+        stubStudentRow(resultSet, 50, enrollment, "Juan", 0, true);
         Student student = studentDAO.getStudentByEnrollment(enrollment);
-        assertNotNull(student);
         assertEquals(enrollment, student.getEnrollment());
-        assertNull(student.getAssignedProject());
     }
 
+    @Test
+    void getStudentByEnrollment_StudentExistsWithProject_ReturnsStudentWithAssignedProject() throws SQLException, DataOperationException {
+        String enrollment = "S21011011";
+        int projectId = 7;
+        Project project = mock(Project.class);
+        when(preparedStatement.executeQuery()).thenReturn(resultSet);
+        when(resultSet.next()).thenReturn(true);
+        stubStudentRow(resultSet, 50, enrollment, "Juan", projectId, true);
+        try (MockedConstruction<ProjectDAO> mockedProjectDAO = mockConstruction(ProjectDAO.class,
+                (mock, context) -> when(mock.getProjectById(projectId)).thenReturn(project))) {
+            Student student = studentDAO.getStudentByEnrollment(enrollment);
+            assertEquals(project, student.getAssignedProject());
+        }
+    }
 
     @Test
-    void getStudentByEnrollment_SQLException_ThrowsDataOperationException() throws SQLException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudentByEnrollment_SQLExceptionThrown_ThrowsDataOperationException() throws SQLException {
         when(preparedStatement.executeQuery()).thenThrow(new SQLException("Error en vista"));
         assertThrows(DataOperationException.class, () -> studentDAO.getStudentByEnrollment("S123"));
     }
 
     @Test
-    void getStudentByEnrollment_Success_WithProject() throws SQLException {
-        String enrollment = "S21011011";
-        int projectId = 7;
-        Project mockProject = mock(Project.class);
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
-        when(preparedStatement.executeQuery()).thenReturn(resultSet);
-        when(resultSet.next()).thenReturn(true);
-        when(resultSet.getInt("id_usuario")).thenReturn(50);
-        when(resultSet.getInt("proyecto")).thenReturn(projectId);
-        try (MockedConstruction<ProjectDAO> mocked = mockConstruction(ProjectDAO.class, (mock, context) -> { when(mock.getProjectById(projectId)).thenReturn(mockProject);})) {
-            Student student = studentDAO.getStudentByEnrollment(enrollment);
-            assertNotNull(student);
-            assertEquals(mockProject, student.getAssignedProject());
-        }
-    }
-
-    @Test
-    void getStudentById_InvalidId_ThrowsIllegalArgumentException() {
+    void getStudentById_IdIsZero_ThrowsIllegalArgumentException() {
         assertThrows(IllegalArgumentException.class, () -> studentDAO.getStudentById(0));
     }
 
     @Test
-    void getStudentById_NotFound_ThrowsNoSuchElementException() throws SQLException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudentById_StudentDoesNotExist_ThrowsNoSuchElementException() throws SQLException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(false);
         assertThrows(NoSuchElementException.class, () -> studentDAO.getStudentById(500));
     }
 
     @Test
-    void getStudentById_Success_NoProject() throws SQLException {
+    void getStudentById_StudentExistsWithoutProject_ReturnsStudentWithExpectedId() throws SQLException, DataOperationException {
         int idTest = 10;
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(true);
-        when(resultSet.getString("nombre")).thenReturn("Maria");
-        when(resultSet.getString("apellidos")).thenReturn("Lopez");
-        when(resultSet.getString("matricula")).thenReturn("S21011000");
-        when(resultSet.getInt("proyecto")).thenReturn(0);
+        stubStudentRow(resultSet, idTest, "S21011000", "Maria", 0, true);
         Student result = studentDAO.getStudentById(idTest);
-        assertNotNull(result);
         assertEquals(idTest, result.getUserId());
-        assertNull(result.getAssignedProject());
-        verify(preparedStatement).setInt(1, idTest);
     }
 
     @Test
-    void getStudentById_SQLException_ThrowsDataOperationException() throws SQLException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudentById_SQLExceptionThrown_ThrowsDataOperationException() throws SQLException {
         when(preparedStatement.executeQuery()).thenThrow(new SQLException("Error de enlace"));
         assertThrows(DataOperationException.class, () -> studentDAO.getStudentById(1));
     }
 
     @Test
-    void registerStudent_Null_ThrowsIllegalArgumentException() {
+    void registerStudent_StudentIsNull_ThrowsIllegalArgumentException() {
         assertThrows(IllegalArgumentException.class, () -> studentDAO.registerStudent(null));
     }
 
     @Test
-    void registerStudent_AlreadyExists_ThrowsIllegalStateException() throws DataOperationException {
+    void registerStudent_EnrollmentAlreadyExists_ThrowsIllegalStateException() throws DataOperationException {
         Student student = new Student(0, "Nombre", "Apellidos", "correo@test.com", "pass", "M", true, "S21011011", false, null, 0.0f);
         StudentDAO spyStudentDAO = spy(studentDAO);
         doReturn(student).when(spyStudentDAO).getStudentByEnrollment("S21011011");
@@ -179,280 +165,256 @@ public class StudentDAOTest {
         Student student = new Student(0, "Nombre", "Apellidos", "correo@test.com", "pass", "M", true, "S22012012", false, null, 0.0f);
         StudentDAO spyStudentDAO = spy(studentDAO);
         doThrow(new NoSuchElementException()).when(spyStudentDAO).getStudentByEnrollment(anyString());
-        try (MockedConstruction<UserDAO> mockedUserDAO = mockConstruction(UserDAO.class, (mock, context) -> {
-            when(mock.registerUser(any())).thenReturn(-1);})) {
+        try (MockedConstruction<UserDAO> mockedUserDAO = mockConstruction(UserDAO.class,
+                (mock, context) -> when(mock.registerUser(any())).thenReturn(-1))) {
             assertThrows(DataOperationException.class, () -> spyStudentDAO.registerStudent(student));
         }
     }
 
     @Test
-    void registerStudent_Successful_ReturnsTrue() throws SQLException {
+    void registerStudent_NewStudentInserted_ReturnsTrue() throws SQLException, DataOperationException {
         String enrollment = "S23013013";
         Student student = new Student(0, "Ana", "García", "ana@test.com", "123", "F", true, enrollment, true, null, 9.5f);
-        int generatedUserId = 100;
         StudentDAO spyStudentDAO = spy(studentDAO);
         doThrow(new NoSuchElementException()).when(spyStudentDAO).getStudentByEnrollment(enrollment);
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeUpdate()).thenReturn(1);
-        try (MockedConstruction<UserDAO> mockedUserDAO = mockConstruction(UserDAO.class, (mock, context) -> {when(mock.registerUser(any(Student.class))).thenReturn(generatedUserId);})) {
+        try (MockedConstruction<UserDAO> mockedUserDAO = mockConstruction(UserDAO.class,
+                (mock, context) -> when(mock.registerUser(any(Student.class))).thenReturn(100))) {
             boolean result = spyStudentDAO.registerStudent(student);
             assertTrue(result);
-            verify(preparedStatement).setInt(1, generatedUserId);
-            verify(preparedStatement).setString(2, enrollment);
-            verify(preparedStatement).setBoolean(3, true);
-            verify(preparedStatement).setFloat(4, 9.5f);
         }
     }
 
     @Test
-    void registerStudent_SQLException_ThrowsDataOperationException() throws SQLException {
+    void registerStudent_SQLExceptionThrown_ThrowsDataOperationException() throws SQLException, DataOperationException {
         Student student = new Student(0, "Luis", "Paz", "luis@test.com", "123", "M", true, "S24014014", false, null, 7.0f);
         StudentDAO spyStudentDAO = spy(studentDAO);
         doThrow(new NoSuchElementException()).when(spyStudentDAO).getStudentByEnrollment(anyString());
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeUpdate()).thenThrow(new SQLException("Error DB"));
-        try (MockedConstruction<UserDAO> mockedUserDAO = mockConstruction(UserDAO.class, (mock, context) -> {when(mock.registerUser(any())).thenReturn(200);})) {
+        try (MockedConstruction<UserDAO> mockedUserDAO = mockConstruction(UserDAO.class,
+                (mock, context) -> when(mock.registerUser(any())).thenReturn(200))) {
             assertThrows(DataOperationException.class, () -> spyStudentDAO.registerStudent(student));
         }
     }
 
     @Test
-    void modifyStudent_Null_ThrowsIllegalArgumentException() {
-        assertThrows(IllegalArgumentException.class, () -> {studentDAO.modifyStudent(null);});
+    void modifyStudent_StudentIsNull_ThrowsIllegalArgumentException() {
+        assertThrows(IllegalArgumentException.class, () -> studentDAO.modifyStudent(null));
     }
 
     @Test
-    void modifyStudent_Successful_ReturnsTrue() throws SQLException {
+    void modifyStudent_UpdateAffectsOneRow_ReturnsTrue() throws SQLException, DataOperationException {
         Student student = new Student(50, "Juan", "Pérez", "juan@test.com", "pass", "M", true, "S21011011", true, null, 9.8f);
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeUpdate()).thenReturn(1);
         boolean result = studentDAO.modifyStudent(student);
         assertTrue(result);
-        verify(preparedStatement).setBoolean(1, true);
-        verify(preparedStatement).setFloat(2, 9.8f);
-        verify(preparedStatement).setInt(3, 50);
     }
 
     @Test
-    void modifyStudent_NotFound_ReturnsFalse() throws SQLException {
+    void modifyStudent_UpdateAffectsZeroRows_ReturnsFalse() throws SQLException, DataOperationException {
         Student student = new Student(999, "Nombre", "Apellidos", "mail@test.com", "123", "M", true, "S000", false, null, 0.0f);
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeUpdate()).thenReturn(0);
         boolean result = studentDAO.modifyStudent(student);
         assertFalse(result);
-        verify(preparedStatement).setInt(3, 999);
     }
 
     @Test
-    void modifyStudent_SQLException_ThrowsDataOperationException() throws SQLException {
+    void modifyStudent_SQLExceptionThrown_ThrowsDataOperationException() throws SQLException {
         Student student = new Student(1, "Luis", "Paz", "luis@test.com", "123", "M", true, "S111", false, null, 7.0f);
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeUpdate()).thenThrow(new SQLException("Error de integridad"));
-        assertThrows(DataOperationException.class, () -> {studentDAO.modifyStudent(student);});
+        assertThrows(DataOperationException.class, () -> studentDAO.modifyStudent(student));
     }
 
     @Test
-    void getStudents_Empty_ReturnsEmptyList() throws SQLException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudents_NoStudentsRegistered_ReturnsEmptyList() throws SQLException, DataOperationException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(false);
         List<Student> result = studentDAO.getStudents();
         assertTrue(result.isEmpty());
-        assertEquals(0, result.size());
     }
 
     @Test
-    void getStudents_Successful_ReturnsList() throws SQLException {
-        String enrollment1 = "S21011011";
-        String enrollment2 = "S21011022";
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudents_TwoStudentsRegistered_ReturnsListWithTwoStudents() throws SQLException, DataOperationException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(true, true, false);
-        when(resultSet.getString("matricula")).thenReturn(enrollment1, enrollment2);
-        Student student1 = mock(Student.class);
-        Student student2 = mock(Student.class);
-        StudentDAO spyDAO = spy(studentDAO);
-        doReturn(student1).when(spyDAO).getStudentByEnrollment(enrollment1);
-        doReturn(student2).when(spyDAO).getStudentByEnrollment(enrollment2);
-        List<Student> result = spyDAO.getStudents();
-        assertNotNull(result);
+        when(resultSet.getInt("id_usuario")).thenReturn(1, 2);
+        when(resultSet.getString("matricula")).thenReturn("S21011001", "S21011002");
+        when(resultSet.getString("nombre")).thenReturn("Juan", "Maria");
+        when(resultSet.getString("apellidos")).thenReturn("Pérez", "García");
+        when(resultSet.getString("correo")).thenReturn("juan@test.com", "maria@test.com");
+        when(resultSet.getString("contrasena")).thenReturn("pass", "pass");
+        when(resultSet.getBoolean("activo")).thenReturn(true, true);
+        when(resultSet.getString("genero")).thenReturn("M", "F");
+        when(resultSet.getBoolean("lengua_indigena")).thenReturn(false, false);
+        when(resultSet.getInt("proyecto")).thenReturn(0, 0);
+        when(resultSet.getFloat("calificacion")).thenReturn(8.0f, 9.0f);
+        List<Student> result = studentDAO.getStudents();
         assertEquals(2, result.size());
-        assertEquals(student1, result.get(0));
-        assertEquals(student2, result.get(1));
-        verify(spyDAO).getStudentByEnrollment(enrollment1);
-        verify(spyDAO).getStudentByEnrollment(enrollment2);
     }
 
     @Test
-    void getStudents_PartialFailure_ContinuesProcessing() throws SQLException {
-        String enrollmentFail = "S00000000";
-        String enrollmentSucces = "S21011011";
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudents_OneStudentProjectCannotBeLoaded_ReturnsOnlySuccessfullyLoadedStudents() throws SQLException, DataOperationException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(true, true, false);
-        when(resultSet.getString("matricula")).thenReturn(enrollmentFail, enrollmentSucces);
-        Student student = mock(Student.class);
-        StudentDAO spyDAO = spy(studentDAO);
-        doThrow(new NoSuchElementException()).when(spyDAO).getStudentByEnrollment(enrollmentFail);
-        doReturn(student).when(spyDAO).getStudentByEnrollment(enrollmentSucces);
-        List<Student> result = spyDAO.getStudents();
-        assertEquals(1, result.size());
-        assertEquals(student, result.get(0));
+        when(resultSet.getInt("id_usuario")).thenReturn(1, 2);
+        when(resultSet.getString("matricula")).thenReturn("S21011001", "S21011002");
+        when(resultSet.getString("nombre")).thenReturn("Juan", "Maria");
+        when(resultSet.getString("apellidos")).thenReturn("Pérez", "García");
+        when(resultSet.getString("correo")).thenReturn("juan@test.com", "maria@test.com");
+        when(resultSet.getString("contrasena")).thenReturn("pass", "pass");
+        when(resultSet.getBoolean("activo")).thenReturn(true, true);
+        when(resultSet.getString("genero")).thenReturn("M", "F");
+        when(resultSet.getBoolean("lengua_indigena")).thenReturn(false, false);
+        when(resultSet.getInt("proyecto")).thenReturn(5, 0);
+        when(resultSet.getFloat("calificacion")).thenReturn(8.0f, 9.0f);
+        try (MockedConstruction<ProjectDAO> mockedProjectDAO = mockConstruction(ProjectDAO.class,
+                (mock, context) -> when(mock.getProjectById(5)).thenThrow(new DataOperationException("Error proyecto")))) {
+            List<Student> result = studentDAO.getStudents();
+            assertEquals(1, result.size());
+        }
     }
 
     @Test
-    void getStudents_SQLException_ThrowsDataOperationException() throws SQLException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudents_SQLExceptionThrown_ThrowsDataOperationException() throws SQLException {
         when(preparedStatement.executeQuery()).thenThrow(new SQLException("Database Down"));
-        assertThrows(DataOperationException.class, () -> {studentDAO.getStudents();});
+        assertThrows(DataOperationException.class, () -> studentDAO.getStudents());
     }
 
     @Test
-    void getStudentsWithoutProject_Empty_ReturnsEmptyList() throws SQLException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudentsWithoutProject_NoStudentsWithoutProject_ReturnsEmptyList() throws SQLException, DataOperationException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(false);
         List<Student> result = studentDAO.getStudentsWithoutProject();
         assertTrue(result.isEmpty());
-        verify(preparedStatement).executeQuery();
     }
 
     @Test
-    void getStudentsWithoutProject_Successful_ReturnsList() throws SQLException {
-        String enrollment1 = "S21011001";
-        String enrollment2 = "S21011002";
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudentsWithoutProject_TwoStudentsWithoutProject_ReturnsListWithTwoStudents() throws SQLException, DataOperationException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(true, true, false);
-        when(resultSet.getString("matricula")).thenReturn(enrollment1, enrollment2);
-        Student student1 = mock(Student.class);
-        Student student2 = mock(Student.class);
-        StudentDAO spyDAO = spy(studentDAO);
-        doReturn(student1).when(spyDAO).getStudentByEnrollment(enrollment1);
-        doReturn(student2).when(spyDAO).getStudentByEnrollment(enrollment2);
-        List<Student> result = spyDAO.getStudentsWithoutProject();
-        assertNotNull(result);
+        when(resultSet.getInt("id_usuario")).thenReturn(3, 4);
+        when(resultSet.getString("matricula")).thenReturn("S21011003", "S21011004");
+        when(resultSet.getString("nombre")).thenReturn("Carlos", "Laura");
+        when(resultSet.getString("apellidos")).thenReturn("Lopez", "Torres");
+        when(resultSet.getString("correo")).thenReturn("c@test.com", "l@test.com");
+        when(resultSet.getString("contrasena")).thenReturn("pass", "pass");
+        when(resultSet.getBoolean("activo")).thenReturn(true, true);
+        when(resultSet.getString("genero")).thenReturn("M", "F");
+        when(resultSet.getBoolean("lengua_indigena")).thenReturn(false, false);
+        when(resultSet.getInt("proyecto")).thenReturn(0, 0);
+        when(resultSet.getFloat("calificacion")).thenReturn(7.0f, 8.5f);
+        List<Student> result = studentDAO.getStudentsWithoutProject();
         assertEquals(2, result.size());
-        assertEquals(student1, result.get(0));
-        verify(spyDAO).getStudentByEnrollment(enrollment1);
     }
 
     @Test
-    void getStudentsWithoutProject_PartialFailure_StaysResilient() throws SQLException {
-        String enrollmentFail = "S00000000";
-        String enrollmentSucces = "S21011001";
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudentsWithoutProject_OneStudentProjectCannotBeLoaded_ReturnsOnlySuccessfullyLoadedStudents() throws SQLException, DataOperationException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(true, true, false);
-        when(resultSet.getString("matricula")).thenReturn(enrollmentFail, enrollmentSucces);
-        Student student = mock(Student.class);
-        StudentDAO spyDAO = spy(studentDAO);
-        doThrow(new DataOperationException("Fallo")).when(spyDAO).getStudentByEnrollment(enrollmentFail);
-        doReturn(student).when(spyDAO).getStudentByEnrollment(enrollmentSucces);
-        List<Student> result = spyDAO.getStudentsWithoutProject();
-        assertEquals(1, result.size());
-        assertEquals(student, result.get(0));
+        when(resultSet.getInt("id_usuario")).thenReturn(3, 4);
+        when(resultSet.getString("matricula")).thenReturn("S21011003", "S21011004");
+        when(resultSet.getString("nombre")).thenReturn("Carlos", "Laura");
+        when(resultSet.getString("apellidos")).thenReturn("Lopez", "Torres");
+        when(resultSet.getString("correo")).thenReturn("c@test.com", "l@test.com");
+        when(resultSet.getString("contrasena")).thenReturn("pass", "pass");
+        when(resultSet.getBoolean("activo")).thenReturn(true, true);
+        when(resultSet.getString("genero")).thenReturn("M", "F");
+        when(resultSet.getBoolean("lengua_indigena")).thenReturn(false, false);
+        when(resultSet.getInt("proyecto")).thenReturn(3, 0);
+        when(resultSet.getFloat("calificacion")).thenReturn(7.0f, 8.5f);
+        try (MockedConstruction<ProjectDAO> mockedProjectDAO = mockConstruction(ProjectDAO.class,
+                (mock, context) -> when(mock.getProjectById(3)).thenThrow(new DataOperationException("Error proyecto")))) {
+            List<Student> result = studentDAO.getStudentsWithoutProject();
+            assertEquals(1, result.size());
+        }
     }
 
     @Test
-    void getStudentsWithoutProject_SQLException_ThrowsDataOperationException() throws SQLException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudentsWithoutProject_SQLExceptionThrown_ThrowsDataOperationException() throws SQLException {
         when(preparedStatement.executeQuery()).thenThrow(new SQLException("Error de sintaxis SQL"));
-        assertThrows(DataOperationException.class, () -> {studentDAO.getStudentsWithoutProject();});
+        assertThrows(DataOperationException.class, () -> studentDAO.getStudentsWithoutProject());
     }
 
     @Test
-    void getActiveStudents_Empty_ReturnsEmptyList() throws SQLException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getActiveStudents_NoActiveStudents_ReturnsEmptyList() throws SQLException, DataOperationException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(false);
         List<Student> result = studentDAO.getActiveStudents();
         assertTrue(result.isEmpty());
-        assertEquals(0, result.size());
     }
 
     @Test
-    void getActiveStudents_Successful_ReturnsList() throws SQLException {
-        String activeEnrollment1 = "S21011001";
-        String activeEnrollment2 = "S21011002";
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getActiveStudents_TwoActiveStudents_ReturnsListWithTwoStudents() throws SQLException, DataOperationException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(true, true, false);
-        when(resultSet.getString("matricula")).thenReturn(activeEnrollment1, activeEnrollment2);
-        Student student1 = mock(Student.class);
-        Student student2 = mock(Student.class);
-        StudentDAO spyDAO = spy(studentDAO);
-        doReturn(student1).when(spyDAO).getStudentByEnrollment(activeEnrollment1);
-        doReturn(student2).when(spyDAO).getStudentByEnrollment(activeEnrollment2);
-        List<Student> result = spyDAO.getActiveStudents();
-        assertNotNull(result);
+        when(resultSet.getInt("id_usuario")).thenReturn(5, 6);
+        when(resultSet.getString("matricula")).thenReturn("S21011005", "S21011006");
+        when(resultSet.getString("nombre")).thenReturn("Pedro", "Sofia");
+        when(resultSet.getString("apellidos")).thenReturn("Rios", "Vega");
+        when(resultSet.getString("correo")).thenReturn("p@test.com", "s@test.com");
+        when(resultSet.getString("contrasena")).thenReturn("pass", "pass");
+        when(resultSet.getBoolean("activo")).thenReturn(true, true);
+        when(resultSet.getString("genero")).thenReturn("M", "F");
+        when(resultSet.getBoolean("lengua_indigena")).thenReturn(false, false);
+        when(resultSet.getInt("proyecto")).thenReturn(0, 0);
+        when(resultSet.getFloat("calificacion")).thenReturn(9.0f, 7.5f);
+        List<Student> result = studentDAO.getActiveStudents();
         assertEquals(2, result.size());
-        assertEquals(student1, result.get(0));
-        verify(spyDAO).getStudentByEnrollment(activeEnrollment1);
     }
 
     @Test
-    void getActiveStudents_PartialFailure_Continues() throws SQLException {
-        String enrollmentFail = "S99999999";
-        String enrollmentSucces = "S21011001";
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getActiveStudents_OneStudentProjectCannotBeLoaded_ReturnsOnlySuccessfullyLoadedStudents() throws SQLException, DataOperationException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(true, true, false);
-        when(resultSet.getString("matricula")).thenReturn(enrollmentFail, enrollmentSucces);
-        Student student = mock(Student.class);
-        StudentDAO spyDAO = spy(studentDAO);
-        doThrow(new NoSuchElementException()).when(spyDAO).getStudentByEnrollment(enrollmentFail);
-        doReturn(student).when(spyDAO).getStudentByEnrollment(enrollmentSucces);
-        List<Student> result = spyDAO.getActiveStudents();
-        assertEquals(1, result.size());
-        assertEquals(student, result.get(0));
+        when(resultSet.getInt("id_usuario")).thenReturn(5, 6);
+        when(resultSet.getString("matricula")).thenReturn("S21011005", "S21011006");
+        when(resultSet.getString("nombre")).thenReturn("Pedro", "Sofia");
+        when(resultSet.getString("apellidos")).thenReturn("Rios", "Vega");
+        when(resultSet.getString("correo")).thenReturn("p@test.com", "s@test.com");
+        when(resultSet.getString("contrasena")).thenReturn("pass", "pass");
+        when(resultSet.getBoolean("activo")).thenReturn(true, true);
+        when(resultSet.getString("genero")).thenReturn("M", "F");
+        when(resultSet.getBoolean("lengua_indigena")).thenReturn(false, false);
+        when(resultSet.getInt("proyecto")).thenReturn(7, 0);
+        when(resultSet.getFloat("calificacion")).thenReturn(9.0f, 7.5f);
+        try (MockedConstruction<ProjectDAO> mockedProjectDAO = mockConstruction(ProjectDAO.class,
+                (mock, context) -> when(mock.getProjectById(7)).thenThrow(new DataOperationException("Error proyecto")))) {
+            List<Student> result = studentDAO.getActiveStudents();
+            assertEquals(1, result.size());
+        }
     }
 
     @Test
-    void getActiveStudents_SQLException_ThrowsDataOperationException() throws SQLException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getActiveStudents_SQLExceptionThrown_ThrowsDataOperationException() throws SQLException {
         when(preparedStatement.executeQuery()).thenThrow(new SQLException("Error de enlace"));
-        assertThrows(DataOperationException.class, () -> {studentDAO.getActiveStudents();});
+        assertThrows(DataOperationException.class, () -> studentDAO.getActiveStudents());
     }
 
     @Test
-    void saveSelectedProjects_Successful() throws SQLException {
+    void saveSelectedProjects_ValidProjects_DoesNotThrow() throws SQLException {
         Student student = new Student(1, "Juan", "Perez", "juan@test.com", "123", "M", true, "S21011001", false, null, 0.0f);
-        List<Project> projects = new ArrayList<>();
-        projects.add(new Project(101, "Proyecto A"));
-        projects.add(new Project(102, "Proyecto B"));
-        projects.add(new Project(103, "Proyecto C"));
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+        List<Project> projects = List.of(new Project(101, "Proyecto A"), new Project(102, "Proyecto B"), new Project(103, "Proyecto C"));
         when(preparedStatement.executeBatch()).thenReturn(new int[]{1, 1, 1});
-        studentDAO.saveSelectedProjects(projects, student);
-        verify(preparedStatement, times(3)).addBatch();
-        verify(preparedStatement).executeBatch();
-        verify(preparedStatement, atLeastOnce()).setString(1, "S21011001");
+        assertDoesNotThrow(() -> studentDAO.saveSelectedProjects(projects, student));
     }
 
     @Test
-    void saveSelectedProjects_EmptyList_DoesNothing() throws SQLException {
+    void saveSelectedProjects_EmptyList_DoesNotThrow() throws SQLException {
         Student student = new Student(1, "Juan", "Perez", "mail", "123", "M", true, "S210", false, null, 0.0f);
-        List<Project> projects = new ArrayList<>();
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
-        studentDAO.saveSelectedProjects(projects, student);
-        verify(preparedStatement, never()).addBatch();
-        verify(preparedStatement).executeBatch();
+        assertDoesNotThrow(() -> studentDAO.saveSelectedProjects(List.of(), student));
     }
 
     @Test
-    void saveSelectedProjects_SQLException_ThrowsDataOperationException() throws SQLException {
+    void saveSelectedProjects_SQLExceptionThrown_ThrowsDataOperationException() throws SQLException {
         Student student = new Student(1, "Juan", "Perez", "mail", "123", "M", true, "S210", false, null, 0.0f);
-        List<Project> projects = Collections.singletonList(new Project(1, "Test"));
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+        List<Project> projects = List.of(new Project(1, "Test"));
         when(preparedStatement.executeBatch()).thenThrow(new SQLException("Duplicate entry"));
-        assertThrows(DataOperationException.class, () -> {studentDAO.saveSelectedProjects(projects, student);});
+        assertThrows(DataOperationException.class, () -> studentDAO.saveSelectedProjects(projects, student));
     }
 
     @Test
-    void getSelectedProjects_Successful_ReturnsList() throws SQLException {
+    void getSelectedProjects_StudentHasTwoSelections_ReturnsListWithTwoProjects() throws SQLException, DataOperationException {
         Student student = new Student(1, "Ana", "Díaz", "ana@test.com", "123", "F", true, "S21011001", false, null, 0.0f);
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(true, true, false);
         when(resultSet.getInt("proyecto_seleccionado")).thenReturn(101, 102);
@@ -464,72 +426,57 @@ public class StudentDAOTest {
                     when(mock.getProjectById(102)).thenReturn(project2);
                 })) {
             List<Project> result = studentDAO.getSelectedProjects(student);
-            assertNotNull(result);
             assertEquals(2, result.size());
-            assertEquals(project1, result.get(0));
-            assertEquals(project2, result.get(1));
-            verify(preparedStatement).setString(1, "S21011001");
         }
     }
 
     @Test
-    void getSelectedProjects_Empty_ReturnsEmptyList() throws SQLException {
+    void getSelectedProjects_StudentHasNoSelections_ReturnsEmptyList() throws SQLException, DataOperationException {
         Student student = new Student(1, "Ana", "Díaz", "ana@test.com", "123", "F", true, "S21011001", false, null, 0.0f);
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(false);
         List<Project> result = studentDAO.getSelectedProjects(student);
         assertTrue(result.isEmpty());
-        assertEquals(0, result.size());
     }
 
     @Test
-    void getSelectedProjects_SQLException_ThrowsDataOperationException() throws SQLException {
+    void getSelectedProjects_SQLExceptionThrown_ThrowsDataOperationException() throws SQLException {
         Student student = new Student(1, "Ana", "Díaz", "ana@test.com", "123", "F", true, "S21011001", false, null, 0.0f);
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeQuery()).thenThrow(new SQLException("Error de lectura"));
-        assertThrows(DataOperationException.class, () -> {studentDAO.getSelectedProjects(student);});
+        assertThrows(DataOperationException.class, () -> studentDAO.getSelectedProjects(student));
     }
 
     @Test
-    void assignProject_Successful_UpdatesStudentAndProject() throws SQLException {
+    void assignProject_UpdateAffectsOneRow_ReturnsTrue() throws SQLException, DataOperationException {
         Student student = new Student(1, "Luis", "Paz", "mail", "123", "M", true, "S21011001", false, null, 0.0f);
         Project project = new Project(5, "Sistema de Gestión", 10);
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeUpdate()).thenReturn(1);
-        try (MockedConstruction<ProjectDAO> mockedProjectDAO = mockConstruction(ProjectDAO.class, (mock, context) -> {
-                    when(mock.modifyProject(any(Project.class))).thenReturn(true);
-                })) {
+        try (MockedConstruction<ProjectDAO> mockedProjectDAO = mockConstruction(ProjectDAO.class,
+                (mock, context) -> when(mock.modifyProject(any(Project.class))).thenReturn(true))) {
             boolean result = studentDAO.assignProject(student, project);
             assertTrue(result);
-            assertEquals(9, project.getAvailablePlaces());
-            verify(preparedStatement).setInt(1, 5);
-            verify(preparedStatement).setString(2, "S21011001");
         }
     }
 
     @Test
-    void assignProject_UpdateFails_ReturnsFalse() throws SQLException {
+    void assignProject_UpdateAffectsZeroRows_ReturnsFalse() throws SQLException, DataOperationException {
         Student student = new Student(1, "Luis", "Paz", "mail", "123", "M", true, "S000", false, null, 0.0f);
         Project project = new Project(5, "Test", 5);
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeUpdate()).thenReturn(0);
         boolean result = studentDAO.assignProject(student, project);
         assertFalse(result);
-        assertEquals(5, project.getAvailablePlaces());
     }
 
     @Test
-    void assignProject_SQLException_ThrowsDataOperationException() throws SQLException {
+    void assignProject_SQLExceptionThrown_ThrowsDataOperationException() throws SQLException {
         Student student = new Student(1, "Luis", "Paz", "mail", "123", "M", true, "S111", false, null, 0.0f);
         Project project = new Project(1, "Test", 1);
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
         when(preparedStatement.executeUpdate()).thenThrow(new SQLException("Deadlock detectado"));
-        assertThrows(DataOperationException.class, () -> {studentDAO.assignProject(student, project);});
+        assertThrows(DataOperationException.class, () -> studentDAO.assignProject(student, project));
     }
 
     @Test
-    void assignEducationalExperience_Successful_ReturnsTrue() throws SQLException {
+    void assignEducationalExperience_InsertAffectsOneRow_ReturnsTrue() throws SQLException, DataOperationException {
         Student student = new Student(45, "Pedro", "López", "pedro@test.com", "123", "M", true, "S21011001", false, null, 0.0f);
         EducationalExperience educationalExperience = new EducationalExperience("88421", "Prácticas Profesionales", "FEB-JUN 2026");
         Practice practice = new Practice(student, educationalExperience);
@@ -537,13 +484,10 @@ public class StudentDAOTest {
         when(preparedStatement.executeUpdate()).thenReturn(1);
         boolean result = studentDAO.assignEducationalExperience(practice);
         assertTrue(result);
-        verify(preparedStatement).setInt(1, 45);
-        verify(preparedStatement).setString(2, "FEB-JUN 2026");
-        verify(preparedStatement).setString(3, "88421");
     }
 
     @Test
-    void assignEducationalExperience_Fails_ReturnsFalse() throws SQLException {
+    void assignEducationalExperience_InsertAffectsZeroRows_ReturnsFalse() throws SQLException, DataOperationException {
         Student student = new Student(1, "A", "B", "mail", "1", "M", true, "S1", false, null, 0.0f);
         EducationalExperience educationalExperience = new EducationalExperience("000", "EE", "PER");
         Practice practice = new Practice(student, educationalExperience);
@@ -554,28 +498,27 @@ public class StudentDAOTest {
     }
 
     @Test
-    void assignEducationalExperience_SQLException_ThrowsDataOperationException() throws SQLException {
+    void assignEducationalExperience_SQLExceptionThrown_ThrowsDataOperationException() throws SQLException {
         Student student = new Student(1, "A", "B", "mail", "1", "M", true, "S1", false, null, 0.0f);
         EducationalExperience educationalExperience = new EducationalExperience("123", "EE", "PER");
         Practice practice = new Practice(student, educationalExperience);
         when(connection.prepareStatement(anyString(), anyInt())).thenReturn(preparedStatement);
         when(preparedStatement.executeUpdate()).thenThrow(new SQLException("Foreign key constraint fails"));
-        assertThrows(DataOperationException.class, () -> {studentDAO.assignEducationalExperience(practice);});
+        assertThrows(DataOperationException.class, () -> studentDAO.assignEducationalExperience(practice));
     }
 
     @Test
-    void getStudentsByEducationalExperience_NrcNull_ThrowsIllegalArgumentException() {
+    void getStudentsByEducationalExperience_NrcIsNull_ThrowsIllegalArgumentException() {
         assertThrows(IllegalArgumentException.class, () -> studentDAO.getStudentsByEducationalExperience(null));
     }
 
     @Test
-    void getStudentsByEducationalExperience_NrcBlank_ThrowsIllegalArgumentException() {
+    void getStudentsByEducationalExperience_NrcIsBlank_ThrowsIllegalArgumentException() {
         assertThrows(IllegalArgumentException.class, () -> studentDAO.getStudentsByEducationalExperience("   "));
     }
 
     @Test
-    void getStudentsByEducationalExperience_Empty_ReturnsEmptyList() throws SQLException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudentsByEducationalExperience_NoStudentsEnrolled_ReturnsEmptyList() throws SQLException, DataOperationException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(false);
         List<Student> result = studentDAO.getStudentsByEducationalExperience("88421");
@@ -583,51 +526,49 @@ public class StudentDAOTest {
     }
 
     @Test
-    void getStudentsByEducationalExperience_Successful_ReturnsList() throws SQLException {
-        String enrollment1 = "S21011001";
-        String enrollment2 = "S21011002";
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudentsByEducationalExperience_TwoStudentsEnrolled_ReturnsListWithTwoStudents() throws SQLException, DataOperationException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(true, true, false);
-        when(resultSet.getString("matricula")).thenReturn(enrollment1, enrollment2);
-        Student student1 = mock(Student.class);
-        Student student2 = mock(Student.class);
-        StudentDAO spyDAO = spy(studentDAO);
-        doReturn(student1).when(spyDAO).getStudentByEnrollment(enrollment1);
-        doReturn(student2).when(spyDAO).getStudentByEnrollment(enrollment2);
-        List<Student> result = spyDAO.getStudentsByEducationalExperience("88421");
+        when(resultSet.getInt("id_usuario")).thenReturn(10, 11);
+        when(resultSet.getString("matricula")).thenReturn("S21011010", "S21011011");
+        when(resultSet.getString("nombre")).thenReturn("Rosa", "Felix");
+        when(resultSet.getString("apellidos")).thenReturn("Mora", "Diaz");
+        when(resultSet.getString("correo")).thenReturn("r@test.com", "f@test.com");
+        when(resultSet.getString("contrasena")).thenReturn("pass", "pass");
+        when(resultSet.getBoolean("activo")).thenReturn(true, true);
+        when(resultSet.getString("genero")).thenReturn("F", "M");
+        when(resultSet.getBoolean("lengua_indigena")).thenReturn(false, false);
+        when(resultSet.getInt("proyecto")).thenReturn(0, 0);
+        when(resultSet.getFloat("calificacion")).thenReturn(9.5f, 8.0f);
+        List<Student> result = studentDAO.getStudentsByEducationalExperience("88421");
         assertEquals(2, result.size());
     }
 
     @Test
-    void getStudentsByEducationalExperience_PartialFailure_Continues() throws SQLException {
-        String enrollmentFail = "S99999999";
-        String enrollmentSucces = "S21011001";
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudentsByEducationalExperience_OneStudentProjectCannotBeLoaded_ReturnsOnlySuccessfullyLoadedStudents() throws SQLException, DataOperationException {
         when(preparedStatement.executeQuery()).thenReturn(resultSet);
         when(resultSet.next()).thenReturn(true, true, false);
-        when(resultSet.getString("matricula")).thenReturn(enrollmentFail, enrollmentSucces);
-        Student student = mock(Student.class);
-        StudentDAO spyDAO = spy(studentDAO);
-        doThrow(new NoSuchElementException()).when(spyDAO).getStudentByEnrollment(enrollmentFail);
-        doReturn(student).when(spyDAO).getStudentByEnrollment(enrollmentSucces);
-        List<Student> result = spyDAO.getStudentsByEducationalExperience("88421");
-        assertEquals(1, result.size());
+        when(resultSet.getInt("id_usuario")).thenReturn(10, 11);
+        when(resultSet.getString("matricula")).thenReturn("S21011010", "S21011011");
+        when(resultSet.getString("nombre")).thenReturn("Rosa", "Felix");
+        when(resultSet.getString("apellidos")).thenReturn("Mora", "Diaz");
+        when(resultSet.getString("correo")).thenReturn("r@test.com", "f@test.com");
+        when(resultSet.getString("contrasena")).thenReturn("pass", "pass");
+        when(resultSet.getBoolean("activo")).thenReturn(true, true);
+        when(resultSet.getString("genero")).thenReturn("F", "M");
+        when(resultSet.getBoolean("lengua_indigena")).thenReturn(false, false);
+        when(resultSet.getInt("proyecto")).thenReturn(2, 0);
+        when(resultSet.getFloat("calificacion")).thenReturn(9.5f, 8.0f);
+        try (MockedConstruction<ProjectDAO> mockedProjectDAO = mockConstruction(ProjectDAO.class,
+                (mock, context) -> when(mock.getProjectById(2)).thenThrow(new DataOperationException("Error proyecto")))) {
+            List<Student> result = studentDAO.getStudentsByEducationalExperience("88421");
+            assertEquals(1, result.size());
+        }
     }
 
     @Test
-    void getStudentsByEducationalExperience_SQLException_ThrowsDataOperationException() throws SQLException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
+    void getStudentsByEducationalExperience_SQLExceptionThrown_ThrowsDataOperationException() throws SQLException {
         when(preparedStatement.executeQuery()).thenThrow(new SQLException("Error de enlace"));
         assertThrows(DataOperationException.class, () -> studentDAO.getStudentsByEducationalExperience("88421"));
-    }
-
-    @Test
-    void getStudentsByEducationalExperience_QueriesCorrectNrc_VerifiesParameter() throws SQLException, DataOperationException {
-        when(connection.prepareStatement(anyString())).thenReturn(preparedStatement);
-        when(preparedStatement.executeQuery()).thenReturn(resultSet);
-        when(resultSet.next()).thenReturn(false);
-        studentDAO.getStudentsByEducationalExperience("88421");
-        verify(preparedStatement).setString(1, "88421");
     }
 }
